- Added the needed ServiceDefaults project;

--- a/BusinessServices/AdminsManagement/snowcoreBlog.Backend.AdminsManagement.csproj
+++ b/BusinessServices/AdminsManagement/snowcoreBlog.Backend.AdminsManagement.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Endpoints\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
