--- a/BusinessServices/UsersManagement/snowcoreBlog.Backend.UsersManagement.csproj
+++ b/BusinessServices/UsersManagement/snowcoreBlog.Backend.UsersManagement.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Endpoints\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\snowcoreBlog.Universal\ServiceDefaults\snowcoreBlog.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
