--- a/Shared/Services/Email/appsettings.Development.json
+++ b/Shared/Services/Email/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "SendGrid": {
-    "Key": "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"
+    "Key": ""
   }
 }
