--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -24,14 +24,13 @@
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
     <PackageReference Include="Marten" Version="7.17.0" />
-    <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.1.0" />
+    <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.1.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Riok.Mapperly" Version="3.5.1">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
