- And internal movement;

--- a/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
+++ b/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Marten" Version="7.31.3" />
+    <PackageReference Include="Marten.CommandLine" Version="7.31.3" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Fody" Version="6.9.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
