--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Ixnas.AltchaNet" Version="0.4.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.1" />
     <PackageReference Include="Marten" Version="7.31.3" />
+    <PackageReference Include="Marten.CommandLine" Version="7.31.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="MinimalStepifiedSystem.Core" Version="1.1.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.2.37" />
