--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Project": {
+    "PublicDomain": "https://snowcore.blog"
+  },
+  "SendGrid": {
+    "DynamicTemplates": {
+      "ReaderAccountTempUserCreatedTemplateId": "d-4c0c5df5ef8d4a1b9e72cced00f8147b"
+    },
+    "SenderAccount": {
+      "SenderAddress": "superprojects@live.ru",
+      "SenderName": "snowcore's Blog"
+    }
   }
 }
