--- a/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
+++ b/BusinessServices/ReadersManagement/snowcoreBlog.Backend.ReadersManagement.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FastEndpoints.OpenTelemetry" Version="2.3.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.31.0" />
     <PackageReference Include="Fody" Version="6.9.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
