--- a/BusinessServices/Articles/Properties/launchSettings.json
+++ b/BusinessServices/Articles/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
-      "applicationUrl": "http://localhost:5052",
+    "https": {
+      "applicationUrl": "https://localhost:5052",
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
