--- a/BusinessServices/ReadersManagement/Properties/launchSettings.json
+++ b/BusinessServices/ReadersManagement/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
-      "applicationUrl": "http://localhost:5050",
+    "https": {
+      "applicationUrl": "https://localhost:5050",
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
