--- a/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
+++ b/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
@@ -25,4 +25,8 @@
     <None Update="**/FodyWeavers.*" Visible="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Services\" />
+  </ItemGroup>
+
 </Project>
