--- a/Shared/Services/Push/snowcoreBlog.Backend.Push.csproj
+++ b/Shared/Services/Push/snowcoreBlog.Backend.Push.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\..\Push.Core\snowcoreBlog.Backend.Push.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
