--- a/Shared/Services/IAM/appsettings.Development.json
+++ b/Shared/Services/IAM/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "Fido2": {
+    "Origins": [
+      "https://localhost:5010"
+    ],
+    "ServerDomain": "localhost",
+    "ServerName": "localhost",
+    "TimestampDriftTolerance": 300000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
