- Working captcha & registration form;

--- a/Shared/Infrastructure/snowcoreBlog.Backend.Infrastructure.csproj
+++ b/Shared/Infrastructure/snowcoreBlog.Backend.Infrastructure.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\..\snowcoreBlog.Universal\PublicApi\snowcoreBlog.PublicApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
