--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -16,5 +16,14 @@
       "SenderAddress": "superprojects@live.ru",
       "SenderName": "snowcore's Blog"
     }
+  },
+  "Security": {
+    "ReaderAccountTokenRequirements": {
+      "Claims": {
+        "readerAccount": "true"
+      },
+      "AccessTokenValidityDurationInMinutes": 30,
+      "RefreshTokenValidityDurationInMinutes": 21600
+    }
   }
 }
