- Fixes related to Marten usage;

--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -8,15 +8,6 @@
   "Project": {
     "PublicDomain": "https://snowcore.blog"
   },
-  "SendGrid": {
-    "DynamicTemplates": {
-      "ReaderAccountTempUserCreatedTemplateId": "d-4c0c5df5ef8d4a1b9e72cced00f8147b"
-    },
-    "SenderAccount": {
-      "SenderAddress": "superprojects@live.ru",
-      "SenderName": "snowcore's Blog"
-    }
-  },
   "Security": {
     "ReaderAccountTokenRequirements": {
       "Claims": {
@@ -24,6 +15,17 @@
       },
       "AccessTokenValidityDurationInMinutes": 30,
       "RefreshTokenValidityDurationInMinutes": 21600
+    }
+  },
+  "Integrations": {
+    "SendGrid": {
+      "DynamicTemplates": {
+        "ReaderAccountTempUserCreatedTemplateId": "d-4c0c5df5ef8d4a1b9e72cced00f8147b"
+      },
+      "SenderAccount": {
+        "SenderAddress": "superprojects@live.ru",
+        "SenderName": "snowcore's Blog"
+      }
     }
   }
 }
