--- a/Shared/Services/Email/appsettings.Development.json
+++ b/Shared/Services/Email/appsettings.Development.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SendGrid": {
-    "Key": ""
+  "Integrations": {
+    "SendGrid": {
+      "Key": ""
+    }
   }
 }
