- Half way with swapping to AWSSES2

--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -18,13 +18,15 @@
     }
   },
   "Integrations": {
-    "SendGrid": {
-      "DynamicTemplates": {
-        "ReaderAccountTempUserCreatedTemplateId": "d-4c0c5df5ef8d4a1b9e72cced00f8147b"
-      },
+    "Email": {
       "SenderAccount": {
         "SenderAddress": "superprojects@live.ru",
         "SenderName": "snowcore's Blog"
+      }
+    },
+    "SendGrid": {
+      "DynamicTemplates": {
+        "ReaderAccountTempUserCreatedTemplateId": "d-4c0c5df5ef8d4a1b9e72cced00f8147b"
       }
     }
   }
