- Registration flow setup for local dev;

--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "Project": {
-    "PublicDomain": "https://snowcore.blog"
+    "PublicBackendDomain": "https://localhost/api/readers",
+    "PublicFrontendDomain": "https://localhost:7288"
   },
   "Security": {
     "ReaderAccountTokenRequirements": {
