--- a/Shared/Core/snowcoreBlog.Backend.Core.csproj
+++ b/Shared/Core/snowcoreBlog.Backend.Core.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="snowcoreBlog.ResourceLoading" Version="0.0.3" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="WTorricos.Results" Version="2.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles
+      Include="Resources\RouteResources_*.json"
+      NamespaceName="snowcoreBlog.Frontend.Core.Resources"
+      ClassName="RouteResources"
+      NeutralCulture="en" />
   </ItemGroup>
 
 </Project>
