- YARP resource rewritten to support waiting for referenced resources; - Config upds;

--- a/BusinessServices/ReadersManagement/appsettings.Development.json
+++ b/BusinessServices/ReadersManagement/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Project": {
     "PublicBackendDomain": "https://localhost/api/readers",
-    "PublicFrontendDomain": "https://localhost:7288"
+    "PublicFrontendDomain": "https://localhost/app"
   },
   "Security": {
     "ReaderAccountTokenRequirements": {
