--- a/Shared/Core/snowcoreBlog.Backend.Core.csproj
+++ b/Shared/Core/snowcoreBlog.Backend.Core.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="kli.Localize" Version="2.0.4" />
-    <PackageReference Include="FluentValidation" Version="12.1.0" />
-    <PackageReference Include="WTorricos.Results" Version="2.0.4" />
+    <PackageReference Include="kli.Localize" />
+    <PackageReference Include="FluentValidation" />
+    <PackageReference Include="WTorricos.Results" />
   </ItemGroup>
 
   <ItemGroup>
