--- a/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
+++ b/Shared/IAM.Core/snowcoreBlog.Backend.IAM.Core.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fido2" Version="4.0.0" />
-    <PackageReference Include="Marten" Version="7.40.5" />
-    <PackageReference Include="Marten.CommandLine" Version="7.40.5" />
+    <PackageReference Include="Fido2" />
+    <PackageReference Include="Marten" />
+    <PackageReference Include="Marten.CommandLine" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Fody" Version="6.9.3">
+    <PackageReference Include="Fody">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Include="ConfigureAwait.Fody" />
   </ItemGroup>
 
   <ItemGroup>
