--- a/Shared/Push.Core/snowcoreBlog.Backend.Push.Core.csproj
+++ b/Shared/Push.Core/snowcoreBlog.Backend.Push.Core.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Fody" Version="6.9.3">
+    <PackageReference Include="Fody">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
+    <PackageReference Include="ConfigureAwait.Fody" />
   </ItemGroup>
 
   <ItemGroup>
