--- a/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
+++ b/Shared/Services/AspireYarpGateway/snowcoreBlog.Backend.AspireYarpGateway.csproj
@@ -11,14 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="9.5.2" />
-    <PackageReference Include="Aspire.StackExchange.Redis" Version="9.5.2" />
-    <PackageReference Include="FastEndpoints.Security" Version="7.1.1" />
-    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
-    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="10.0.0" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.10.0-beta.1" />
-    <PackageReference Include="Riok.Mapperly" Version="4.3.0">
+    <PackageReference Include="Aspire.Hosting" />
+    <PackageReference Include="Aspire.StackExchange.Redis" />
+    <PackageReference Include="FastEndpoints.Security" />
+    <PackageReference Include="ConfigureAwait.Fody" />
+    <PackageReference Include="MassTransit.RabbitMQ" />
+    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery.Yarp" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" />
+    <PackageReference Include="Riok.Mapperly">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
