--- a/Shared/Services/Email/snowcoreBlog.Backend.Email.csproj
+++ b/Shared/Services/Email/snowcoreBlog.Backend.Email.csproj
@@ -10,18 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.StackExchange.Redis" Version="9.5.2" />
-    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.14" />
-    <PackageReference Include="AWSSDK.SimpleEmailV2" Version="4.0.7" />
-    <PackageReference Include="Fody" Version="6.9.3">
+    <PackageReference Include="Aspire.StackExchange.Redis" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" />
+    <PackageReference Include="AWSSDK.SimpleEmailV2" />
+    <PackageReference Include="Fody">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
-    <PackageReference Include="SendGrid" Version="9.29.3" />
-    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
-    <PackageReference Include="Riok.Mapperly" Version="4.3.0">
+    <PackageReference Include="ConfigureAwait.Fody" />
+    <PackageReference Include="MassTransit.RabbitMQ" />
+    <PackageReference Include="SendGrid" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" />
+    <PackageReference Include="Riok.Mapperly">
       <ExcludeAssets>runtime</ExcludeAssets>
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
