--- a/Shared/Services/IMS/IMS.csproj
+++ b/Shared/Services/IMS/IMS.csproj
@@ -7,14 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
-    <PackageReference Include="FastEndpoints" Version="6.1.0" />
-    <PackageReference Include="FastEndpoints.OpenTelemetry" Version="2.3.0" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
-    <PackageReference Include="Marten" Version="7.40.3" />
-    <PackageReference Include="FluentValidation" Version="12.0.0" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.10.0-beta.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="FastEndpoints" />
+    <PackageReference Include="FastEndpoints.OpenTelemetry" />
+    <PackageReference Include="MassTransit.RabbitMQ" />
+    <PackageReference Include="Marten" />
+    <PackageReference Include="FluentValidation" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" />
   </ItemGroup>
 
   <ItemGroup>
